# zero-players-game

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  noise.ipynb  pyproject.toml  run  rungame.sh  test.py
assets/: resources.pyxres
game/: __init__.py  app.py  biome.py  paths.py  world.py
