[tool.poetry]
name = "zero-players-game"
version = "1.0.0"
description = ""
authors = ["Marcos Gabarda <marcos@dekalabs.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyxel = "^1.7.0"
numpy = "^1.22.3"
opensimplex = "^0.4.2"
noise = "^1.2.2"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.3.0"}
isort = "^5.10.1"
pylint = "^2.13.8"
mypy = "^0.950"
pre-commit = "^2.19.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
ipython = "^8.3.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
